--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 # Personal info
 name: Koushik Roy
 title: Deep Learning Researcher (Computer Vision | Natural Language Processing)
-email: 96koushikroy[at]gmail.com
+email: kr2960[at]columbia.edu
 website: https://scholar.google.com/citations?user=JzhGYr8AAAAJ&hl=en
 
 # Dark Mode (true/false/never)
@@ -48,22 +48,33 @@ linkedin_username: 96koushikroy
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi all, I'm Koushik, a computer scientist from Bangladesh. I have been working in academic research for the past two years. I am currently working as a Research Assistant at the NSU-Apurba R&D Lab at North South University, working on Bangla OCR for a project by the Government of Bangladesh. Previously, I have worked at [Gaze Pte. Ltd.](https://gaze.ai/){:target="_blank"} as a Deep Learning Researcher working on Face Liveliness Detection for Biometric Authentication pipelines.
+  Hi all, I'm Koushik, a computer scientist from Bangladesh. I have been working doing academic research since 2019. I am currently enrolled as a full-time student in the graduate CS program at [Columbia University](https://www.cs.columbia.edu/){:target="_blank"}. Previously, I have worked as a Research Assistant at the NSU-Apurba R&D Lab at North South University, on Bangla OCR for a project by the Government of Bangladesh. I have also worked at [Gaze Pte. Ltd.](https://gaze.ai/){:target="_blank"} as a Deep Learning Researcher working on Face Liveliness Detection for Biometric Authentication pipelines.
 
   Apart from this, I have been a part of multiple industry-academia collaborations with companies like [Headblocks Ltd.](http://www.head-blocks.com/){:target="_blank"} and [Apurba Technologies Inc.](http://www.apurbatech.com/){:target="_blank"}, where I worked on ML-based solutions that would ameliorate their pre-existing conditions. 
 
   Other than academics, I am an avid enthusiast for algorithmic problem solving, being a sport programmer during my undergraduate study, represented my university at multiple national and international competitions.
 
-  <i class="far fa-file"></i> CV link [here](https://drive.google.com/file/d/1ca9X24rGeXH63Kf4QB81XGI6tMGtKPf0/view?usp=sharing){:target="_blank"}.
+  <i class="far fa-file"></i> Resume link [here](https://drive.google.com/file/d/1JjMjATgMYBJ2lQdrtXONiGkYKjO2I2iA/view?usp=sharing){:target="_blank"}.
 content:
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
 
       - layout: top-middle
+        title: <mark>Columbia University</mark>
+        caption: 2021 - 2023, New York, NY
+        sub_title: MS in Computer Science
+        additional_links:
+          - title:  Dept. of CS at CU
+            icon: fas fa-globe
+            url: https://www.cs.columbia.edu/
+        # quote: >
+        #   Graduated with a cumulative GPA of 3.53 out of 4.00 (cum-laude distinction).
+
+      - layout: top-middle
         title: <mark>North South University</mark>
-        caption: 2015 - 2019, Dhaka, Bangladesh
-        sub_title: BSc. in Computer Science & Engineering
+        caption: 2015 - 2019, Dhaka, BD
+        sub_title: BS in Computer Science & Engineering
         additional_links:
           - title:  Dept. of CS at NSU
             icon: fas fa-globe
@@ -77,7 +88,7 @@ content:
       - layout: top-middle
         title: <mark>Apurba-NSU R&D Lab, North South University</mark>
         sub_title: Research Assistant
-        caption: January 2021 - Present, Dhaka, Bangladesh
+        caption: January 2021 - August 2021, Dhaka, Bangladesh
         additional_links:
           - title:  Dept. of CS at NSU
             icon: fas fa-globe
@@ -109,6 +120,7 @@ content:
           
           - Metric Learning strategies for problems in Vision or NLP.
           - Convex approaches for model optimization.
+          - Graph Neural Networks.
           - Exploring Low Resource Problems (e.g. Domain Adaptation, Cost Sensitive Learning, Contrastive Learning).
           - Improvements in downstream tasks such as Face Anti-Spoofing, Optical Character Recognition using Neural approaches.
 
@@ -134,13 +146,12 @@ content:
 
           - **Roy  K.**, Khan A. M., Ali M. Z., Simanto S. R., Mohammed N., Atick M. A., . . ., Islam K. M. (2019). **An Analytical Approach for Enhancing the Automatic Detection and Recognition of Skewed Bangla License Plates**. 2019 International Conference on Bangla Speech and Language Processing (ICBSLP) [Online]. Available: [https://doi.org/10.1109/ICBSLP47725.2019.201528](https://doi.org/10.1109/ICBSLP47725.2019.201528){:target="_blank"}
 
-          - **Roy K.**, Islam N., Khan T., Khan M. M. (2019). **A Novel Approach to Data Storage Using Blockchain Technology**. 2019 International Conference on Information Technology (ICIT) [Online]. Available: [https://doi.org/10.1109/ICIT48102.2019.00050](https://doi.org/10.1109/ICIT48102.2019.00050){:target="_blank"}
-
           - **Roy K.**, Imam A. A., Islam N., and Firoze  A. (2018). **A Traffic Jam Prediction Model for Dynamic Routes Using Global Positioning Systems Data from Vehicles at Different Times of the Day**. 2018 Joint 10th International Conference on Soft Computing and Intelligent Systems (SCIS) and 19th International Symposium on Advanced Intelligent Systems (ISIS) [Online]. Available: [https://doi.org/10.1109/SCIS-ISIS.2018.00061](https://doi.org/10.1109/SCIS-ISIS.2018.00061){:target="_blank"} 
   
 
 
-  # - title: A Little More About Me
+  # - title: A Little More About Me - **Roy K.**, Islam N., Khan T., Khan M. M. (2019). **A Novel Approach to Data Storage Using Blockchain Technology**. 2019 International Conference on Information Technology (ICIT) [Online]. Available: [https://doi.org/10.1109/ICIT48102.2019.00050](https://doi.org/10.1109/ICIT48102.2019.00050){:target="_blank"}
+
   #   layout: text
   #   content: | # this will include new lines to allow paragraphs
   #     Alongside my interests in networks and software engineering some of my other interests and hobbies are:
