--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ linkedin_username: 96koushikroy
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi all, I'm Koushik, a computer scientist from Bangladesh. I have been working doing academic research since 2019. I am currently enrolled as a full-time student in the graduate CS program at [Columbia University](https://www.cs.columbia.edu/){:target="_blank"}. Previously, I have worked as a Research Assistant at the NSU-Apurba R&D Lab at North South University, on Bangla OCR for a project by the Government of Bangladesh. I have also worked at [Gaze Pte. Ltd.](https://gaze.ai/){:target="_blank"} as a Deep Learning Researcher working on Face Liveliness Detection for Biometric Authentication pipelines.
+  Hi all, I'm Koushik, a computer scientist from Bangladesh. I have been working doing academic research since 2019. I am currently enrolled as a graduate student of Computer Science at [Columbia University](https://www.cs.columbia.edu/){:target="_blank"}. Previously, I have worked as a Research Assistant at the NSU-Apurba R&D Lab at North South University, on Bangla OCR for a project by the Government of Bangladesh. I have also worked at [Gaze Pte. Ltd.](https://gaze.ai/){:target="_blank"} as a Deep Learning Researcher working on Face Liveliness Detection for Biometric Authentication pipelines.
 
   Apart from this, I have been a part of multiple industry-academia collaborations with companies like [Headblocks Ltd.](http://www.head-blocks.com/){:target="_blank"} and [Apurba Technologies Inc.](http://www.apurbatech.com/){:target="_blank"}, where I worked on ML-based solutions that would ameliorate their pre-existing conditions. 
 
